Ask user to deplace medias in another section, when delete a section, and improve checking of family, section and medias

--- a/app/Views/section/index.html.twig
+++ b/app/Views/section/index.html.twig
@@ -21,7 +21,7 @@
         <p style="color: green">{{ flash.section_success }}</p>
     {% endif %}
     {% if flash.section_failed is defined %}
-        <p style="color: green">{{ flash.section_failed }}</p>
+        <p style="color: red">{{ flash.section_failed }}</p>
     {% endif %}
 
     {% if family.Sections|length > 0 %}
