Use slug for FamilyController routes

--- a/app/Views/family/members.html.twig
+++ b/app/Views/family/members.html.twig
@@ -6,7 +6,7 @@
     <script src="/js/search_user.js"></script>
     <script>
         allUser = false;
-        familyId = {{ family.id }};
+        familySlug = "{{ family.slug }}";
     </script>
 {% endblock %}
 
