--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -9,7 +9,7 @@
     <script src="/js/media_search.js"></script>
     <script>
 		familySlug = "{{ section.Family.slug }}";
-        sectionId = {{ section.id }};
+		sectionSlug = "{{ section.slug }}";
         globalSearch = false;
     </script>
 {% endblock %}
@@ -68,16 +68,16 @@
                     <td>{{ media.date|date('Y-m-d') }}</td>
                     <td>{{ media.type == "video" ? "Vidéo": "Photo" }}</td>
                     <td>
-                        <a class="btn" href="{{ path('media_edit', {'familySlug': section.Family.slug, 'sectionId': section.id, 'mediaId': media.id}) }}">Modifier</a>
+                        <a class="btn" href="{{ path('media_edit', {'familySlug': section.Family.slug, 'sectionSlug': section.slug, 'mediaId': media.id}) }}">Modifier</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
         <h2>Vous pouvez aussi ajouter une nouvelle photo/video dans cette rubrique!</h2>
-        <a class="btn" href="{{ path('media_new', {'familySlug': section.Family.slug, 'sectionId': section.id}) }}">Créer</a>
+        <a class="btn" href="{{ path('media_new', {'familySlug': section.Family.slug, 'sectionSlug': section.slug}) }}">Créer</a>
     {% else %}
         <h2>Il semblerait qu'il n'y ait pas de photo/video dans cette rubrique</h2>
-        <a class="btn" href="{{ path('media_new', {'familySlug': section.Family.slug, 'sectionId': section.id}) }}">Créer en une!</a>
+        <a class="btn" href="{{ path('media_new', {'familySlug': section.Family.slug, 'sectionSlug': section.slug}) }}">Créer en une!</a>
     {% endif %}
 {% endblock %}
