--- a/app/Views/section/global.html.twig
+++ b/app/Views/section/global.html.twig
@@ -62,6 +62,7 @@
                     <td>{{ media.type == "video" ? "Vidéo": "Photo" }}</td>
                     <td><a href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': media.sectionSlug}) }}">{{ media.sectionName }}</a></td>
                     <td>
+                        <a class="btn" href="{{ path('media_view', {'familySlug': family.slug, 'sectionSlug': media.sectionSlug, 'mediaSlug': media.slug}) }}">Voir</a>
                         <a class="btn" href="{{ path('media_edit', {'familySlug': family.slug, 'sectionSlug': media.sectionSlug, 'mediaSlug': media.slug}) }}">Modifier</a>
                     </td>
                 </tr>
