--- a/app/Views/media/view.html.twig
+++ b/app/Views/media/view.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}{{ media.name }}{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="/css/media_view.css">
+{% endblock %}
+
 {% block body %}
     <a class="btn back-btn" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">Retour</a>
     <h1>{{ media.name }}</h1>
