Can delete comments asynchronously

--- a/app/Views/media/view.html.twig
+++ b/app/Views/media/view.html.twig
@@ -5,6 +5,9 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="/css/media_view.css">
 {% endblock %}
+{% block javascripts %}
+    <script async src="/js/comment.js"></script>
+{% endblock %}
 
 {% block body %}
     <a class="btn back-btn" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">Retour</a>
@@ -17,23 +20,32 @@
             <source src="{{ path('media_read', {'familySlug': family.slug, 'sectionSlug': section.slug, 'mediaSlug': media.slug}) }}">
         </video>
     {% endif %}
+
+
     <div id="comment_container">
         {% if flash.comment_success is defined %}
             <p style="color: green">{{ flash.comment_success }}</p>
         {% endif %}
         <h2>Créez un commentaire</h2>
+
         {% include "Modals/forms.html.twig" with {'form': commentForm} %}
+
         {% if comments|length > 0 %}
             <ul id="comments">
                 {% set nb = 0 %}
                 {% for comment in comments %}
-                    <li class="comment">
+                    <li class="comment" id="comment_{{ comment.id }}">
                         {% if nb > 0 %}
                             <hr>
                         {% endif %}
                         <div class="header">
                             De {{ comment.User.firstname }} {{ comment.User.lastname }}
                             à {{ comment.createdAt|date("Y-m-d H:i:s") }}
+                            {% if comment.User.id == session.user.id %}
+                                <div class="actions">
+                                    {% include "Modals/forms_async.html.twig" with {'form': commentDeleteForms[comment.id], 'callback': 'comment_deleted'} %}
+                                </div>
+                            {% endif %}
                         </div>
                         <div class="body">
                             {{ comment.content }}
