Can show passwords in clear text in form, display complexity password requires to user when register

--- a/app/Views/security/account_confirmation.html.twig
+++ b/app/Views/security/account_confirmation.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ success ? "Confirmation réussie!!" : "Confirmation échouée" }}{% endblock %}
+{% block title %}Confirmation réussie!!{% endblock %}
 
 {% block body %}
     <h1 style="color: green;">Confirmation réussie!!</h1>
