--- a/app/Views/Modals/fields.html.twig
+++ b/app/Views/Modals/fields.html.twig
@@ -36,11 +36,7 @@
                     {% if field.maxLength is defined %}maxLength="{{ field.maxLength }}"{% endif %}
                     {% if field.class is defined %}class="{{ field.class }}"{% endif %}
                     {% if field.required is defined and field.required %} required='required'{% endif %}
-				>{% if flash.datas[form.config.actionName] is defined and flash.datas[form.config.actionName]|keys|length > 0 %}
-					{{ flash.datas[form.config.actionName][name] }}
-				{% elseif field.value is defined %}
-                    {{ field.value }}
-                {% endif %}</textarea>
+				>{% if flash.datas[form.config.actionName] is defined and flash.datas[form.config.actionName]|keys|length > 0 and flash.datas[form.config.actionName][name] != '' %}{{ flash.datas[form.config.actionName][name] }}{% elseif field.value is defined %}{{ field.value }}{% endif %}</textarea>
         {% else %}
             <input
                     type="{{ field.type }}"
