--- a/app/Views/index.html.twig
+++ b/app/Views/index.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% if session.user %}
+        <div class="right-top-buttons">
+            <a class="btn" href="{{ path('global') }}">Rechercher une photo/vidéo</a>
+        </div>
+    {% endif %}
     <h1>Bienvenue sur Family Vid!</h1>
 
     {% if flash.failed is defined %}
