--- a/app/Views/family/members.html.twig
+++ b/app/Views/family/members.html.twig
@@ -7,6 +7,7 @@
     <script>
         allUser = false;
         familySlug = "{{ family.slug }}";
+        userId = {{ session.user.id }};
     </script>
 {% endblock %}
 
@@ -27,7 +28,7 @@
             <tr>
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
-                <td>{{ user.email }}</td>
+                <td>{{ user.email }} {% if session.user.id == user.id %}(vous){% endif %}</td>
             </tr>
         {% else %}
             <tr><td colspan="4">Aucun utilisateur trouvé</td></tr>
