--- a/app/public/css/media_view.css
+++ b/app/public/css/media_view.css
@@ -1,5 +1,18 @@
-img, video {
+#media {
+    position: relative;
     width: 50%;
+}
+
+#media video, #media img {
+    width: 100%;
+}
+
+#nb_views {
+    position: absolute;
+    right: 20px;
+    bottom: -27px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 #comments {
