--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -50,7 +50,7 @@
                 </select>
             </div>
         </div>
-        <input type="text" placeholder="Tapez un mot clé..." id="input_search">
+        <input type="text" placeholder="Recherche..." id="input_search">
         <h2>Les photos/videos :</h2>
         <table>
             <thead>
