--- a/app/Views/media/view.html.twig
+++ b/app/Views/media/view.html.twig
@@ -16,6 +16,12 @@
 
 {% block body %}
     <a class="btn back-btn" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">Retour</a>
+    <span class="path">
+        <a title="Famille {{ family.name }}" href="{{ path('section_index', {'familySlug': family.slug}) }}">{{ family.name }}</a>
+        <span>></span>
+        <a title="Section {{ section.name }}" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">{{ section.name }}</a>
+    </span>
+
     <h1>{{ media.name }}</h1>
 
     <div id="media">
