--- a/app/public/css/media_view.css
+++ b/app/public/css/media_view.css
@@ -15,6 +15,21 @@
     font-size: 20px;
 }
 
+.path {
+    position: absolute;
+    top: 70px;
+    right: 15%;
+    background-color: #DFD278;
+    padding: 5px;
+    margin: 10px;
+    border-radius: 30px;
+}
+
+.path a {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 #comments {
     margin-top: 25px;
     background-color: #FFD278;
