--- a/app/public/css/media_view.css
+++ b/app/public/css/media_view.css
@@ -15,6 +15,15 @@
     font-size: 20px;
 }
 
+h1 {
+  margin-bottom: 30px;
+}
+
+.date {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
 .path {
     position: absolute;
     top: 70px;
