--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -66,7 +66,7 @@
                 <tr>
                     <td>{{ media.name }}</td>
                     <td>{{ media.date|date('d/m/Y') }}</td>
-                    <td>{{ media.type == "video" ? "Vidéo": "Photo" }}</td>
+                    <td><img title="{{ media.type == "video" ? "Vidéo": "Photo" }}" src="{{ media.type == "video" ? "/images/clap.png" : "/images/picture.png" }}"></td>
                     <td>
                         <a class="btn" href="{{ path('media_view', {'familySlug': section.Family.slug, 'sectionSlug': section.slug, 'mediaSlug': media.slug}) }}">Voir</a>
                         <a class="btn" href="{{ path('media_edit', {'familySlug': section.Family.slug, 'sectionSlug': section.slug, 'mediaSlug': media.slug}) }}">Modifier</a>
