--- a/app/Views/media/view.html.twig
+++ b/app/Views/media/view.html.twig
@@ -15,14 +15,29 @@
 {% endblock %}
 
 {% block body %}
-    <a class="btn back-btn" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">Retour</a>
+    <a class="btn back-btn" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">Retour à la liste</a>
     <span class="path">
         <a title="Famille {{ family.name }}" href="{{ path('section_index', {'familySlug': family.slug}) }}">{{ family.name }}</a>
         <span>></span>
         <a title="Section {{ section.name }}" href="{{ path('media_index', {'familySlug': family.slug, 'sectionSlug': section.slug}) }}">{{ section.name }}</a>
     </span>
 
-    <h1>{{ media.name }}</h1>
+    <div class="title_prev_next">
+        <div>
+        {% if previousMedia %}
+            <a class="btn" href="{{ path('media_view', {'familySlug': family.slug, 'sectionSlug': section.slug, 'mediaSlug': previousMedia.slug}) }}">Précédent</a>
+        {% endif %}
+        </div>
+
+        <h1>{{ media.name }}</h1>
+
+        <div>
+        {% if nextMedia %}
+                <a class="btn" href="{{ path('media_view', {'familySlug': family.slug, 'sectionSlug': section.slug, 'mediaSlug': nextMedia.slug}) }}">Suivant</a>
+        {% endif %}
+        </div>
+    </div>
+
     <div class="date">{{ media.date|date('d/m/Y') }}</div>
 
     <div id="media">
