Add links to access to diaporama

--- a/app/Views/diaporama.html.twig
+++ b/app/Views/diaporama.html.twig
@@ -41,6 +41,7 @@
 {% endblock %}
 
 {% block body %}
+    <a class="btn back-btn" href="{{ referer }}">Retour</a>
     <h1>
         Diaporama sur
         {% if family %}
