--- a/app/Views/media/view.html.twig
+++ b/app/Views/media/view.html.twig
@@ -38,6 +38,8 @@
         </div>
     </div>
 
+    <a class="btn" href="{{ path('diaporama_show') }}?familySlug={{ family.slug }}&sectionSlug={{ section.slug }}&mediaSlug={{ media.slug }}">Diaporama</a>
+
     <div class="date">{{ media.date|date('d/m/Y') }}</div>
 
     <div id="media">
