--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -26,6 +26,7 @@
     {% endif %}
 
     {% if section.Medias|length > 0 %}
+        <a class="btn" href="{{ path('diaporama_show') }}?familySlug={{ section.Family.slug }}&sectionSlug={{ section.slug }}">Diaporama</a>
         <div id="search-headband">
             <div>
                 <label for="sortBy_filter">Trier par</label>
