Add previous and next button in diaporama

--- a/app/Views/diaporama.html.twig
+++ b/app/Views/diaporama.html.twig
@@ -118,7 +118,9 @@
         </div>
 
         <div id="buttons">
+            <a class="btn" id="btn_prev">Précédent</a>
             <a class="btn btn-diapo" id="play_stop_button"><img src="/images/play.png"></a>
+            <a class="btn" id="btn_next">Suivant</a>
         </div>
     </div>
 
