--- a/app/Views/diaporama.html.twig
+++ b/app/Views/diaporama.html.twig
@@ -135,7 +135,9 @@
             <span class="date">
                 {{ media.date|date("d/m/Y") }}
             </span>
-            <img src="{{ path('media_read', {'familySlug': media.familySlug, 'sectionSlug': media.sectionSlug, 'mediaSlug': media.slug}) }}"/>
+            <a class="media_link" target="_blank" href="{{ path('media_view', {'familySlug': media.familySlug, 'sectionSlug': media.sectionSlug, 'mediaSlug': media.slug}) }}">
+                <img src="{{ path('media_read', {'familySlug': media.familySlug, 'sectionSlug': media.sectionSlug, 'mediaSlug': media.slug}) }}"/>
+            </a>
         {% else %}
             <h2></h2>
             <span class="path">
@@ -145,7 +147,9 @@
             </span>
             <span class="date">
             </span>
-            <img src=""/>
+            <a class="media_link" target="_blank" href="#">
+                <img src=""/>
+            </a>
         {% endif %}
     </div>
 {% endblock %}
