Improve core files of framework, and set default date order at DESC

--- a/app/Views/media/index.html.twig
+++ b/app/Views/media/index.html.twig
@@ -47,7 +47,7 @@
                 <label for="sort_filter">Trier dans l'ordre</label>
                 <select id="sort_filter">
                     <option value="ASC">Croissant</option>
-                    <option value="DESC">Décroissant</option>
+                    <option value="DESC" selected="selected">Décroissant</option>
                 </select>
             </div>
         </div>
